Change history
--------------

Release Candidate 1
===================

- Added support for defaultValue attribute to FormHelper, which specificy
  what the value should be if the target evaluates to null.

- Added indexed properties support to FormHelper

  When the target is an array you can
  
    PropertyBag.Add("roles", Roles.FindAll());
    --
    FormHelper.TextField("roles[0].Id")
  
  Which will output
  
    <input type="text" id="roles_0_Id" name="roles[0].Id" value="1" />

  The indexed property can be nested

    PropertyBag.Add("user", User.Find(1));
    --
    FormHelper.TextField("user.roles[0].Id")

    <input type="text" id="user_roles_0_Id" name="user.roles[0].Id" value="1" />

- Added RadioField(String target, object valueToSend, [IDictionary attributes]) to FormHelper

  The radio will be marked with checked="checked" if the value collected 
  from the target matches the valueToSend parameter

- Fixed RedirectToAction on WizardStepPage. Now it produces a correct action url.

- Changed WizardStepPage.InternalRedirectToStep to simply RedirectToStep

- Changed SmartDispatcherController.BuildMethodArguments. Now it tests if the conversion 
  succeeded before setting the value on the array.

- Introduced IWizardPageFactory on WindsorExtension, so a Wizard controller doesn't
  need to reference the IKernel directly

- Some optimization on Redirect* methods on Controller class. Now they accept
  an IDictionary as a parameter specifier (in addition to NameValueCollection).
  
- Refactored ControllerDescriptorBuilder (renamed to ControllerDescriptorProvider)
  to use child providers to obtain descriptor. Attributes are now descriptors builders
  and that allows one to come up with custom attributes like

  public class MyAttribute : Attribute, ILayoutDescriptorBuilder, IHelperDescriptorBuilder
  {
     public LayoutDescriptor BuildLayoutDescriptor() 
     {
       return new LayoutDescriptor("mylayout");
     }
